      #463020)

  * Don't rely on old revision being on the mainline after push. 
    (Jelmer Vernooij, #522836)

  * Support + signs in URLs. (Jelmer Vernooij, #552868)

  * Always detect newer tags. (Jelmer Vernooij, #504314)

  * Non-unicode characters in existing commit messages are now squashed.
    (Jelmer vernooij, #586408, #509063)

 FEATURES

  * Support fetching a limited number of revisions. (Michael Hudson)

  * Support 'bzr diff --format=svn'. (Jelmer Vernooij, #555994)
  
  * Warn about broken server when accessing codeplex. (Jelmer Vernooij)

 COMPATIBILITY

  * Drop support for Bazaar < 2.2. (Jelmer Vernooij)

 CHANGES

  * "bzr svn-import --incremental" is now the default. 
    "bzr svn-import --restore" provides the previous behaviour and will 
	restore any branches that have been removed but have not been changed 
    since the last import.  (Jelmer Vernooij, #395266)

bzr-svn 1.0.2					  2010-01-22

 BUG FIXES

  * Cope with Google code Subversion repositories a bit better in the 
    layout detection code. (Jelmer Vernooij)
  
  * Push tags when pushing to a new repository. (Jelmer Vernooij, #459444)

  * Cope with non-ascii URLs.
   * During connect. (#456548, Jelmer Vernooij)
   * During repository creation. (#458008, Jelmer Vernooij)

  * Cope with non-ascii characters in svn author names. (#460392, 
    Jelmer Vernooij)

  * Fix expected URL in Repository.__repr__ tests that sometimes causes 
    troubles if the temporary directory contains special characters. 
	(John Szakmeister, #460899)

  * Cope with pushing new non-mainline revisions.  (Jelmer Vernooij, #416328)

  * Support probing for Subversion repositories over existing HTTP transports
    using pycurl. (Jelmer Vernooij, #424626)

  * Show Subversion revno and uuid in "bzr version-info". (Jelmer Vernooij,
    #490771)

  * Properly handle invalid Subversion revision numbers. (Jelmer Vernooij,
    #504376)

 PERFORMANCE
